--- a/RunsheungIOS/portal/TinyMall/shoplist/Segment/ChoiceTableViewCell.xib
+++ b/RunsheungIOS/portal/TinyMall/shoplist/Segment/ChoiceTableViewCell.xib
@@ -70,18 +70,18 @@
                         </connections>
                     </button>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1.5km" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fej-Pt-fCd">
-                        <rect key="frame" x="313.5" y="20" width="35.5" height="16"/>
+                        <rect key="frame" x="308.5" y="20" width="35.5" height="16"/>
                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="선택언택언어" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zle-fE-6O3">
-                        <rect key="frame" x="281" y="82" width="68" height="16"/>
+                        <rect key="frame" x="276" y="82" width="68" height="16"/>
                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_arrow_small" translatesAutoresizingMaskIntoConstraints="NO" id="3dR-4Z-gxH">
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="rs_arrow" translatesAutoresizingMaskIntoConstraints="NO" id="3dR-4Z-gxH">
                         <rect key="frame" x="359" y="54" width="8" height="12"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="8" id="VHv-Q8-yRn"/>
@@ -101,7 +101,7 @@
                     <constraint firstAttribute="trailing" secondItem="3dR-4Z-gxH" secondAttribute="trailing" constant="8" id="UNS-ur-WSI"/>
                     <constraint firstItem="hKP-GS-xtN" firstAttribute="leading" secondItem="A3r-4o-xxj" secondAttribute="leading" id="Vlq-vY-EOA"/>
                     <constraint firstItem="FfH-7L-eW1" firstAttribute="bottom" secondItem="V9c-nC-Ca4" secondAttribute="bottom" id="fbA-Kw-kGT"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="Fej-Pt-fCd" secondAttribute="trailing" constant="10" id="nmq-9S-5k7"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="Fej-Pt-fCd" secondAttribute="trailing" constant="15" id="nmq-9S-5k7"/>
                     <constraint firstItem="V9c-nC-Ca4" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="rqi-X4-hev"/>
                     <constraint firstItem="V9c-nC-Ca4" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" id="sZF-LQ-ldE"/>
                     <constraint firstItem="Fej-Pt-fCd" firstAttribute="trailing" secondItem="Zle-fE-6O3" secondAttribute="trailing" id="uY7-Kd-ilI"/>
@@ -120,7 +120,7 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="icon_arrow_small" width="7" height="11"/>
         <image name="img_product_circle01" width="79" height="79"/>
+        <image name="rs_arrow" width="9" height="15"/>
     </resources>
 </document>
