--- a/RunsheungIOS/portal/TinyMall/shoplist/Segment/ChoiceTableViewCell.xib
+++ b/RunsheungIOS/portal/TinyMall/shoplist/Segment/ChoiceTableViewCell.xib
@@ -21,13 +21,14 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img_product_circle01" translatesAutoresizingMaskIntoConstraints="NO" id="V9c-nC-Ca4">
-                        <rect key="frame" x="10" y="20" width="79" height="80"/>
+                        <rect key="frame" x="10" y="20" width="80" height="80"/>
                         <constraints>
+                            <constraint firstAttribute="width" constant="80" id="iCH-Ad-FfZ"/>
                             <constraint firstAttribute="height" constant="80" id="lw2-cb-QAe"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="선택언어선택언어" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A3r-4o-xxj">
-                        <rect key="frame" x="97" y="20" width="118" height="20"/>
+                        <rect key="frame" x="98" y="20" width="118" height="20"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="20" id="jEC-FF-Ilp"/>
                         </constraints>
@@ -36,7 +37,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oaF-7i-881">
-                        <rect key="frame" x="97" y="42" width="70" height="14"/>
+                        <rect key="frame" x="98" y="42" width="70" height="14"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="14" id="YVT-v8-DFQ"/>
                             <constraint firstAttribute="width" constant="70" id="gKh-BT-SG0"/>
@@ -46,7 +47,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="선택언어 0 선택언어 0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hKP-GS-xtN">
-                        <rect key="frame" x="97" y="58" width="108.5" height="20"/>
+                        <rect key="frame" x="98" y="58" width="108.5" height="20"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="20" id="ph0-Dy-lXP"/>
                         </constraints>
@@ -55,7 +56,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FfH-7L-eW1">
-                        <rect key="frame" x="97" y="80" width="46" height="20"/>
+                        <rect key="frame" x="98" y="80" width="46" height="20"/>
                         <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="0.25098040700000002" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="20" id="ljg-uK-Ob7"/>
@@ -112,6 +113,8 @@
             <connections>
                 <outlet property="Headavor" destination="V9c-nC-Ca4" id="Wne-RF-mk0"/>
                 <outlet property="detailedLab" destination="hKP-GS-xtN" id="PgN-vI-Tsc"/>
+                <outlet property="distance" destination="Fej-Pt-fCd" id="Wg6-B4-EBe"/>
+                <outlet property="lastlabel" destination="Zle-fE-6O3" id="pee-DP-HKS"/>
                 <outlet property="starView" destination="oaF-7i-881" id="2Lf-fI-t3w"/>
                 <outlet property="titleLab" destination="A3r-4o-xxj" id="FJA-yf-caO"/>
                 <outlet property="unkownBtn" destination="FfH-7L-eW1" id="cQn-sj-zbv"/>
