--- a/RunsheungIOS/portal/TinyMall/Main/View/MainTableViewCell.xib
+++ b/RunsheungIOS/portal/TinyMall/Main/View/MainTableViewCell.xib
@@ -41,7 +41,7 @@
                     </label>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Tgh-bj-Bu1">
                         <rect key="frame" x="114" y="66" width="100" height="14"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" red="1" green="0.33861354341587224" blue="0.39375198949229007" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="100" id="fDO-9g-f3A"/>
                             <constraint firstAttribute="height" constant="14" id="q71-yB-URx"/>
