--- a/RunsheungIOS/portal/TinyMall/MyStore/dataStatistics/DataSingleOrderCell.xib
+++ b/RunsheungIOS/portal/TinyMall/MyStore/dataStatistics/DataSingleOrderCell.xib
@@ -78,12 +78,13 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="#287" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6cF-I0-ch7">
-                                <rect key="frame" x="305" y="10" width="38" height="20"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                <nil key="textColor"/>
+                                <rect key="frame" x="307" y="10" width="36" height="20"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <color key="textColor" red="0.12941176469999999" green="0.75294117650000003" blue="0.26274509800000001" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="8rP-g1-Vot" firstAttribute="leading" secondItem="ohL-fB-RiG" secondAttribute="leading" constant="10" id="1ff-gK-SNh"/>
                             <constraint firstItem="fdy-w5-gK0" firstAttribute="top" secondItem="FDG-hh-tks" secondAttribute="bottom" constant="3" id="3iI-Kl-jhZ"/>
@@ -108,6 +109,7 @@
                         </constraints>
                     </view>
                 </subviews>
+                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 <constraints>
                     <constraint firstItem="ohL-fB-RiG" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="Oeu-X5-aRb"/>
                     <constraint firstItem="ohL-fB-RiG" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="Qz2-IH-3nZ"/>
