--- a/RunsheungIOS/portal/TinyMall/MyStore/GoodsManager/GoodsTableViewCell.xib
+++ b/RunsheungIOS/portal/TinyMall/MyStore/GoodsManager/GoodsTableViewCell.xib
@@ -49,7 +49,7 @@
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="10"/>
                         <state key="normal" title="重新编辑">
-                            <color key="titleColor" white="0.66666666669999997" alpha="1" colorSpace="calibratedWhite"/>
+                            <color key="titleColor" red="0.62745098039215685" green="0.62745098039215685" blue="0.62745098039215685" alpha="1" colorSpace="calibratedRGB"/>
                         </state>
                         <connections>
                             <action selector="reEditionFunc:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="kWP-cU-d4O"/>
