--- a/RunsheungIOS/portal/TinyMall/MyStore/OrderReturns/OrderReturnMainCell.xib
+++ b/RunsheungIOS/portal/TinyMall/MyStore/OrderReturns/OrderReturnMainCell.xib
@@ -12,7 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="205" id="FJC-Qb-4XX" customClass="OrderReturnMainCell" customModule="Portal" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="205" id="FJC-Qb-4XX" customClass="OrderReturnMainCell" customModule="Portal" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="379" height="157"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="FJC-Qb-4XX" id="vdn-45-egQ">
