--- a/RunsheungIOS/portal/TinyMall/MyStore/OrderReturns/OrderReturnMainCell.xib
+++ b/RunsheungIOS/portal/TinyMall/MyStore/OrderReturns/OrderReturnMainCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -150,6 +150,7 @@
                 <outlet property="orderPhone" destination="sJG-U6-nDw" id="kZW-Ld-1ei"/>
                 <outlet property="orderPrice" destination="Wxe-6I-gzn" id="CaI-eh-dpq"/>
                 <outlet property="orderState" destination="L14-dl-aCY" id="QYL-Jp-RSY"/>
+                <outlet property="timelb" destination="1Zf-LK-CCH" id="IQH-L3-QVo"/>
             </connections>
             <point key="canvasLocation" x="364.5" y="54.5"/>
         </tableViewCell>
